[gd_scene load_steps=33 format=3 uid="uid://go6ftjkh6w1s"]

[ext_resource type="Script" path="res://aisles/bosses/banana/banana_boss.gd" id="1_0exk6"]
[ext_resource type="Texture2D" uid="uid://burt17ekyj14t" path="res://aisles/bosses/banana/art/banana_boss.png" id="1_pkxge"]
[ext_resource type="Shader" path="res://miscellaneous/enemy_flash.gdshader" id="2_0m8a5"]
[ext_resource type="PackedScene" uid="uid://dfsj6cpisvgbu" path="res://components/scenes/boss_health_component.tscn" id="2_mco36"]
[ext_resource type="Script" path="res://aisles/bosses/banana/banana_launcher.gd" id="2_oeene"]
[ext_resource type="Script" path="res://aisles/bosses/banana/banana_side_attacks.gd" id="3_4e0oe"]
[ext_resource type="PackedScene" uid="uid://bvr04i1rtrr5n" path="res://components/scenes/enemy_hurtbox.tscn" id="3_re8xx"]
[ext_resource type="PackedScene" uid="uid://d165eow85pjqq" path="res://components/scenes/enemy_hitbox.tscn" id="4_fepfr"]
[ext_resource type="Texture2D" uid="uid://bojq1hm041f7d" path="res://aisles/bosses/banana/art/largebananaprojectile.png" id="4_o0xbo"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Nodes/BuHSpawnPoint.gd" id="9_4xgam"]
[ext_resource type="Texture2D" uid="uid://cyifxmillwo2w" path="res://aisles/bosses/banana/art/bananawarning.png" id="10_3ogn5"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Nodes/BuHPattern.gd" id="10_lgcrl"]
[ext_resource type="Script" path="res://addons/BulletUpHell/SpawnPatterns/PatternLine.gd" id="11_hnaqs"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Nodes/BuHBulletProperties.gd" id="12_der0s"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Bullet/animStates.gd" id="13_l7hcq"]
[ext_resource type="Script" path="res://addons/BulletUpHell/Bullet/BulletProps.gd" id="14_l81ap"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i5yl4"]
shader = ExtResource("2_0m8a5")
shader_parameter/flash_amount = 0.0

[sub_resource type="Animation" id="Animation_4lp56"]
length = 2.395
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.225, 1.475, 1.975, 2.045, 2.115, 2.185, 2.255, 2.325),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire_banana"
}]
}

[sub_resource type="Animation" id="Animation_nafq1"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_veyjp"]
_data = {
"active": SubResource("Animation_4lp56"),
"inactive": SubResource("Animation_nafq1")
}

[sub_resource type="Curve2D" id="Curve2D_7xv0m"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_0h7qw"]
resource_name = "PatternLine"
script = ExtResource("11_hnaqs")
offset = Vector2(0, 20)
center = 0
symmetric = true
bullet = "bananavertical"
nbr = 20
iterations = 1
cooldown_spawn = 1.0
cooldown_shoot = 0.0
cooldown_next_spawn = 0.0
cooldown_next_shoot = 0.0
cooldown_layers = PackedVector2Array()
cooldown_stasis = false
on_interruption = 0
pattern_angle = 0.0
pattern_angle_target = NodePath("")
pattern_angle_mouse = false
wait_behavior = 0
wait_tween_momentum = 0
wait_tween_length = 0.0
wait_tween_time = 0.0
forced_angle = 0.0
forced_target = NodePath("")
forced_lookat_mouse = false
forced_pattern_lookat = true
impulse = 0
bullet_list = Array[String]([])
skip_step = 0
skip_list = Array[PackedInt32Array]([])
skip_in_list = true

[sub_resource type="Curve2D" id="Curve2D_f3ioo"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_4xmw3"]
resource_name = "PatternLine"
script = ExtResource("11_hnaqs")
offset = Vector2(0, 18)
center = 0
symmetric = true
bullet = "bananahorizontal"
nbr = 14
iterations = 1
cooldown_spawn = 1.0
cooldown_shoot = 0.0
cooldown_next_spawn = 0.0
cooldown_next_shoot = 0.0
cooldown_layers = PackedVector2Array()
cooldown_stasis = false
on_interruption = 0
pattern_angle = 0.0
pattern_angle_target = NodePath("")
pattern_angle_mouse = false
wait_behavior = 0
wait_tween_momentum = 0
wait_tween_length = 0.0
wait_tween_time = 0.0
forced_angle = 0.0
forced_target = NodePath("")
forced_lookat_mouse = false
forced_pattern_lookat = true
impulse = 0
bullet_list = Array[String]([])
skip_step = 0
skip_list = Array[PackedInt32Array]([])
skip_in_list = true

[sub_resource type="Curve2D" id="Curve2D_0bjv2"]

[sub_resource type="Curve" id="Curve_052rk"]
min_value = -130.0
max_value = 130.0
_data = [Vector2(0.288235, 130), 0.0, 0.0, 0, 0, Vector2(0.705882, -130), 0.0, 0.0, 0, 0]
point_count = 2
metadata/_snap_count = 3

[sub_resource type="Resource" id="Resource_j3d1f"]
script = ExtResource("13_l7hcq")
ID = "banana"
texture = "banana"
collision = "banana"
SFX = ""
tex_scale = 1.0
tex_skew = 0.0

[sub_resource type="Curve" id="Curve_p7174"]

[sub_resource type="PackedDataContainer" id="PackedDataContainer_dtl82"]
script = ExtResource("14_l81ap")
damage = 1.0
speed = 100.0
scale = 1.0
angle = 0.0
groups = PackedStringArray()
custom_data = {
"test": Vector3(0, 2, 3)
}
death_after_time = 15.0
death_outside_box = Rect2(0, 0, 0, 0)
death_from_collision = true
death_speed_under = 0.0
death_culling_overwrite = 3
spec_modulate_loop = 0.0
no_rotation = false
anim_idle = SubResource("Resource_j3d1f")
anim_spawn = SubResource("Resource_j3d1f")
anim_shoot = SubResource("Resource_j3d1f")
anim_waiting = SubResource("Resource_j3d1f")
anim_delete = SubResource("Resource_j3d1f")
anim_more = Array[ExtResource("13_l7hcq")]([])
spec_trail_length = 0.0
spec_trail_width = 0.0
spec_trail_modulate = Color(1, 1, 1, 1)
spec_trail_fade_out = false
spec_trail_thin_out = false
spec_trail_smooth = 0.03
a_direction_equation = ""
a_angular_equation = ""
a_curve_movement = 0
a_speed_multi_iterations = 1
a_speed_multi_scale = 9.0
a_speed_multiplier = SubResource("Curve_052rk")
depth_active = Vector2(0, 0)
depth_spawn = 0.0
depth_speed = 100.0
depth_min_max = Vector2(-300, 100)
depth_bounce = false
depth_fading = false
depth_scaling = true
spec_bounces = 0
spec_no_collision = false
spec_rotating_speed = 100.8
spec_only_spin_sprite = true
spec_weight = 1.0
scale_multi_iterations = 0
scale_multiplier = SubResource("Curve_p7174")
scale_multi_scale = 1.0
trigger_container = ""
trigger_wait_for_shot = true
homing_type = 0
homing_target = NodePath("")
homing_steer = 0.0
homing_time_start = 0.0
homing_duration = 999.0
homing_detection_dist = 0.0
homing_start_signal = ""
homing_range = Vector2(9999, 20)
homing_imprecision = Vector2(0, 0)
r_randomisation_chances = 1.0
r_speed_choice = PackedFloat32Array()
r_speed_variation = Vector3(0, 0, 0)
r_scale_choice = PackedFloat32Array()
r_scale_variation = Vector3(0, 0, 0)
r_angle_choice = PackedFloat32Array()
r_angle_variation = Vector3(0, 0, 0)
r_group_choice = []
r_bounce_choice = PackedInt32Array()
r_bounce_variation = Vector3(0, 0, 0)
r_no_coll_chances = 0.0
r_modulate_variation = Vector3(0, 0, 0)
r_trail_length_variation = Vector3(0, 0, 0)
r_trail_color_variation = Vector3(0, 0, 0)
r_rotating_variation = Vector3(0, 0, 0)
r_death_after_choice = PackedFloat32Array()
r_death_after_variation = Vector3(0, 0, 0)
r_death_outside_chances = 0.0
r_dir_equation_choice = PackedStringArray()
r_curve_choice = []
r_speed_multi_curve_choice = []
r_speed_multi_iter_variation = Vector3(0, 0, 0)
r_speed_multi_scale_variation = Vector3(0, 0, 0)
r_trigger_choice = PackedStringArray()
r_wait_for_shot_chances = 0.0
r_homing_target_choice = []
r_special_target_choice = PackedStringArray()
r_group_target_choice = PackedStringArray()
r_pos_target_choice = PackedVector2Array()
r_steer_choice = PackedFloat32Array()
r_steer_variation = Vector3(0, 0, 0)
r_homing_delay_choice = PackedFloat32Array()
r_homing_delay_variation = Vector3(0, 0, 0)
r_homing_dur_choice = PackedFloat32Array()
r_homing_dur_variation = Vector3(0, 0, 0)
r_scale_multi_curve_choice = []
r_scale_multi_iter_variation = Vector3(0, 0, 0)
r_scale_multi_scale_variation = Vector3(0, 0, 0)

[sub_resource type="Curve" id="Curve_m7xu1"]
min_value = -130.0
max_value = 130.0
_data = [Vector2(0.294118, 130), 0.0, 0.0, 0, 0, Vector2(0.711765, -130), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_5jckk"]

[sub_resource type="PackedDataContainer" id="PackedDataContainer_fdyeb"]
script = ExtResource("14_l81ap")
damage = 1.0
speed = 100.0
scale = 1.0
angle = 0.0
groups = PackedStringArray()
custom_data = {
"test": Vector3(0, 2, 3)
}
death_after_time = 15.0
death_outside_box = Rect2(0, 0, 0, 0)
death_from_collision = true
death_speed_under = 0.0
death_culling_overwrite = 3
spec_modulate_loop = 0.0
no_rotation = false
anim_idle = SubResource("Resource_j3d1f")
anim_spawn = SubResource("Resource_j3d1f")
anim_shoot = SubResource("Resource_j3d1f")
anim_waiting = SubResource("Resource_j3d1f")
anim_delete = SubResource("Resource_j3d1f")
anim_more = Array[ExtResource("13_l7hcq")]([])
spec_trail_length = 0.0
spec_trail_width = 0.0
spec_trail_modulate = Color(1, 1, 1, 1)
spec_trail_fade_out = false
spec_trail_thin_out = false
spec_trail_smooth = 0.03
a_direction_equation = ""
a_angular_equation = ""
a_curve_movement = 0
a_speed_multi_iterations = 1
a_speed_multi_scale = 14.0
a_speed_multiplier = SubResource("Curve_m7xu1")
depth_active = Vector2(0, 0)
depth_spawn = 0.0
depth_speed = 100.0
depth_min_max = Vector2(-300, 100)
depth_bounce = false
depth_fading = false
depth_scaling = true
spec_bounces = 0
spec_no_collision = false
spec_rotating_speed = 100.8
spec_only_spin_sprite = true
spec_weight = 1.0
scale_multi_iterations = 0
scale_multiplier = SubResource("Curve_5jckk")
scale_multi_scale = 1.0
trigger_container = ""
trigger_wait_for_shot = true
homing_type = 0
homing_target = NodePath("")
homing_steer = 0.0
homing_time_start = 0.0
homing_duration = 999.0
homing_detection_dist = 0.0
homing_start_signal = ""
homing_range = Vector2(9999, 20)
homing_imprecision = Vector2(0, 0)
r_randomisation_chances = 1.0
r_speed_choice = PackedFloat32Array()
r_speed_variation = Vector3(0, 0, 0)
r_scale_choice = PackedFloat32Array()
r_scale_variation = Vector3(0, 0, 0)
r_angle_choice = PackedFloat32Array()
r_angle_variation = Vector3(0, 0, 0)
r_group_choice = []
r_bounce_choice = PackedInt32Array()
r_bounce_variation = Vector3(0, 0, 0)
r_no_coll_chances = 0.0
r_modulate_variation = Vector3(0, 0, 0)
r_trail_length_variation = Vector3(0, 0, 0)
r_trail_color_variation = Vector3(0, 0, 0)
r_rotating_variation = Vector3(0, 0, 0)
r_death_after_choice = PackedFloat32Array()
r_death_after_variation = Vector3(0, 0, 0)
r_death_outside_chances = 0.0
r_dir_equation_choice = PackedStringArray()
r_curve_choice = []
r_speed_multi_curve_choice = []
r_speed_multi_iter_variation = Vector3(0, 0, 0)
r_speed_multi_scale_variation = Vector3(0, 0, 0)
r_trigger_choice = PackedStringArray()
r_wait_for_shot_chances = 0.0
r_homing_target_choice = []
r_special_target_choice = PackedStringArray()
r_group_target_choice = PackedStringArray()
r_pos_target_choice = PackedVector2Array()
r_steer_choice = PackedFloat32Array()
r_steer_variation = Vector3(0, 0, 0)
r_homing_delay_choice = PackedFloat32Array()
r_homing_delay_variation = Vector3(0, 0, 0)
r_homing_dur_choice = PackedFloat32Array()
r_homing_dur_variation = Vector3(0, 0, 0)
r_scale_multi_curve_choice = []
r_scale_multi_iter_variation = Vector3(0, 0, 0)
r_scale_multi_scale_variation = Vector3(0, 0, 0)

[node name="BananaBoss" type="CharacterBody2D" node_paths=PackedStringArray("animation_player", "sprite", "large_banana", "banana_launcher", "side_attacks")]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_0exk6")
animation_player = NodePath("Sprite/AnimationPlayer")
sprite = NodePath("Sprite")
large_banana = NodePath("Banana")
banana_launcher = NodePath("BananaLauncher")
side_attacks = NodePath("SideAttacks")

[node name="BananaLauncher" type="Node2D" parent="."]
script = ExtResource("2_oeene")

[node name="Banana" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(31, -27)
texture = ExtResource("4_o0xbo")
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://aisles/bosses/banana/art",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "C:/Users/edibl/BentoWorks/CleanupOnAisleTwenty/aseprite assets/bananaboss/largebananaprojectile.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "8df17614c26ea8461c4375ed6727f416"

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_i5yl4")
texture = ExtResource("1_pkxge")
hframes = 5
vframes = 5
frame = 12
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://aisles/bosses/banana/art",
"o_name": "banana_boss",
"only_visible": false,
"player": "Sprite/AnimationPlayer",
"slice": "",
"source": "C:/Users/edibl/BentoWorks/CleanupOnAisleTwenty/aseprite assets/bananaboss/banana_boss.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "81c7f3ac3dea96fbf58a759d9aa69069"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_veyjp")
}

[node name="BossHealthComponent" parent="." instance=ExtResource("2_mco36")]
max_health = 25000.0
boss_cutscene_animation_string = "banana"
section_change = true

[node name="EnemyHurtbox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_re8xx")]
health_component = NodePath("../BossHealthComponent")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnemyHurtbox"]
polygon = PackedVector2Array(-53, 112, -35, 92, 13, 80, 39, 61, 53, 25, 59, -4, 39, -16, 20, -16, 5, -15, 5, -15, -6, 25, -41, 75, -59, 104)

[node name="EnemyHitbox" parent="." instance=ExtResource("4_fepfr")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnemyHitbox"]
polygon = PackedVector2Array(-36, 85, 13, 73, 44, 21, 53, 1, 45, -7, 27, -11, 11, -10, 12, -5, -7, 47)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-29, 81, 9, 71, 38, 22, 47, -1, 36, -7, 26, -7, 15, -7, 16, 2, -2, 50)

[node name="Spawnpoints" type="Node2D" parent="."]

[node name="NNW" type="Node2D" parent="Spawnpoints"]
position = Vector2(-200, -250)
rotation = 1.5708
script = ExtResource("9_4xgam")
active = false
auto_pattern_id = "bananavertical"
r_active_chances = 1.0
r_rotating_variation = Vector3(0, 0, 0)
r_pattern_choice = ""
r_start_time_choice = ""
r_start_time_variation = Vector3(0, 0, 0)
r_start_distance_choice = ""
r_start_distance_variation = Vector3(0, 0, 0)

[node name="Warning" type="Sprite2D" parent="Spawnpoints/NNW"]
visible = false
z_index = -1
position = Vector2(64, 0)
rotation = -1.5708
texture = ExtResource("10_3ogn5")

[node name="NNE" type="Node2D" parent="Spawnpoints"]
position = Vector2(200, -250)
rotation = 1.5708
script = ExtResource("9_4xgam")
active = false
auto_pattern_id = "bananavertical"
r_active_chances = 1.0
r_rotating_variation = Vector3(0, 0, 0)
r_pattern_choice = ""
r_start_time_choice = ""
r_start_time_variation = Vector3(0, 0, 0)
r_start_distance_choice = ""
r_start_distance_variation = Vector3(0, 0, 0)

[node name="Warning" type="Sprite2D" parent="Spawnpoints/NNE"]
visible = false
z_index = -1
position = Vector2(64, 0)
rotation = -1.5708
texture = ExtResource("10_3ogn5")

[node name="WNW" type="Node2D" parent="Spawnpoints"]
position = Vector2(-400, -125)
script = ExtResource("9_4xgam")
active = false
auto_pattern_id = "bananahorizontal"
r_active_chances = 1.0
r_rotating_variation = Vector3(0, 0, 0)
r_pattern_choice = ""
r_start_time_choice = ""
r_start_time_variation = Vector3(0, 0, 0)
r_start_distance_choice = ""
r_start_distance_variation = Vector3(0, 0, 0)

[node name="Warning" type="Sprite2D" parent="Spawnpoints/WNW"]
visible = false
z_index = -1
position = Vector2(64, 0)
texture = ExtResource("10_3ogn5")

[node name="WSW" type="Node2D" parent="Spawnpoints"]
position = Vector2(-400, 125)
script = ExtResource("9_4xgam")
active = false
auto_pattern_id = "bananahorizontal"
r_active_chances = 1.0
r_rotating_variation = Vector3(0, 0, 0)
r_pattern_choice = ""
r_start_time_choice = ""
r_start_time_variation = Vector3(0, 0, 0)
r_start_distance_choice = ""
r_start_distance_variation = Vector3(0, 0, 0)

[node name="Warning" type="Sprite2D" parent="Spawnpoints/WSW"]
visible = false
z_index = -1
position = Vector2(64, 0)
texture = ExtResource("10_3ogn5")

[node name="SSW" type="Node2D" parent="Spawnpoints"]
position = Vector2(-200, 250)
rotation = -1.5708
script = ExtResource("9_4xgam")
active = false
auto_pattern_id = "bananavertical"
auto_start_after_time = 1.0
r_active_chances = 1.0
r_rotating_variation = Vector3(0, 0, 0)
r_pattern_choice = ""
r_start_time_choice = ""
r_start_time_variation = Vector3(0, 0, 0)
r_start_distance_choice = ""
r_start_distance_variation = Vector3(0, 0, 0)

[node name="Warning" type="Sprite2D" parent="Spawnpoints/SSW"]
visible = false
z_index = -1
position = Vector2(64, 0)
rotation = 1.5708
texture = ExtResource("10_3ogn5")

[node name="SSE" type="Node2D" parent="Spawnpoints"]
position = Vector2(200, 250)
rotation = -1.5708
script = ExtResource("9_4xgam")
active = false
auto_pattern_id = "bananavertical"
r_active_chances = 1.0
r_rotating_variation = Vector3(0, 0, 0)
r_pattern_choice = ""
r_start_time_choice = ""
r_start_time_variation = Vector3(0, 0, 0)
r_start_distance_choice = ""
r_start_distance_variation = Vector3(0, 0, 0)

[node name="Warning" type="Sprite2D" parent="Spawnpoints/SSE"]
visible = false
z_index = -1
position = Vector2(64, 0)
rotation = 1.5708
texture = ExtResource("10_3ogn5")

[node name="ESE" type="Node2D" parent="Spawnpoints"]
position = Vector2(400, 125)
rotation = 3.14159
script = ExtResource("9_4xgam")
active = false
auto_pattern_id = "bananahorizontal"
r_active_chances = 1.0
r_rotating_variation = Vector3(0, 0, 0)
r_pattern_choice = ""
r_start_time_choice = ""
r_start_time_variation = Vector3(0, 0, 0)
r_start_distance_choice = ""
r_start_distance_variation = Vector3(0, 0, 0)

[node name="Warning" type="Sprite2D" parent="Spawnpoints/ESE"]
visible = false
z_index = -1
position = Vector2(64, 0)
rotation = 3.14159
texture = ExtResource("10_3ogn5")

[node name="ENE" type="Node2D" parent="Spawnpoints"]
position = Vector2(400, -125)
rotation = 3.14159
script = ExtResource("9_4xgam")
active = false
auto_pattern_id = "bananahorizontal"
r_active_chances = 1.0
r_rotating_variation = Vector3(0, 0, 0)
r_pattern_choice = ""
r_start_time_choice = ""
r_start_time_variation = Vector3(0, 0, 0)
r_start_distance_choice = ""
r_start_distance_variation = Vector3(0, 0, 0)

[node name="Warning" type="Sprite2D" parent="Spawnpoints/ENE"]
visible = false
z_index = -1
position = Vector2(64, 0)
rotation = 3.14159
texture = ExtResource("10_3ogn5")

[node name="SpawnPatterns" type="Node2D" parent="."]

[node name="Vertical" type="Path2D" parent="SpawnPatterns"]
curve = SubResource("Curve2D_7xv0m")
script = ExtResource("10_lgcrl")
id = "bananavertical"
pattern = SubResource("NavigationPolygon_0h7qw")

[node name="Horizontal" type="Path2D" parent="SpawnPatterns"]
curve = SubResource("Curve2D_f3ioo")
script = ExtResource("10_lgcrl")
id = "bananahorizontal"
pattern = SubResource("NavigationPolygon_4xmw3")

[node name="BulletPatterns" type="Node2D" parent="."]

[node name="BananaVertical" type="Path2D" parent="BulletPatterns"]
curve = SubResource("Curve2D_0bjv2")
script = ExtResource("12_der0s")
id = "bananavertical"
props = SubResource("PackedDataContainer_dtl82")

[node name="BananaHorizontal" type="Path2D" parent="BulletPatterns"]
curve = SubResource("Curve2D_0bjv2")
script = ExtResource("12_der0s")
id = "bananahorizontal"
props = SubResource("PackedDataContainer_fdyeb")

[node name="SideAttacks" type="Node2D" parent="."]
script = ExtResource("3_4e0oe")

[node name="AttackTimer" type="Timer" parent="SideAttacks"]
wait_time = 12.0
autostart = true

[node name="WarningTimer" type="Timer" parent="SideAttacks"]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="EnemyHitbox" to="EnemyHitbox" method="_on_area_entered"]
[connection signal="timeout" from="SideAttacks/AttackTimer" to="SideAttacks" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="SideAttacks/WarningTimer" to="SideAttacks" method="attack"]
